--- a/app.css
+++ b/app.css
@@ -54,8 +54,10 @@ html {
   
   .button-container {
     margin: 3rem 11.1%;
+    position: relative;
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   
   .btn {
@@ -84,6 +86,12 @@ html {
     font-weight: 400;
     line-height: 1.7rem;
     border: 1px solid #A4B3CACC;
+  }
+
+  #search {
+    position: absolute;
+    top: 1.34rem;
+    right: 44.4rem;
   }
 
   .transact-btn {
